--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "vue-lazytube": "^1.0.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "youtube-vue": "^2.0.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
