--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,14 @@
     "youtube-vue": "^2.0.10"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "^4.5.15",
+    "@vue/cli-plugin-babel": "^5.0.1",
+    "@vue/cli-plugin-eslint": "^5.0.1",
+    "@vue/cli-plugin-router": "^5.0.1",
     "@vue/cli-plugin-vuex": "^4.5.15",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^5.0.1",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^8.11.0",
+    "eslint-plugin-vue": "^8.5.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "^2.4.5",
